# PublicToolbox

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.dokploy.yml  docker-compose.prod.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/tools-web/: README.md  eslint.config.js  index.html  package.json  vite.config.ts
crates/tool-core/: Cargo.toml
crates/tool-wasm/: Cargo.toml
data/: clipboard.db
deploy/: README.md
deploy/docker/: Dockerfile.web  nginx.web.conf
deploy/env/: tools-api.env.example
deploy/nginx/: tools.domain.xxx.conf  tools.heersin.cloud.conf
deploy/scripts/: release.sh  rollback.sh
deploy/systemd/: tools-api.service
docs/: ARCHITECTURE.md  DEPLOY_DOKPLOY.md  DEPLOY_PRODUCTION.md  DEVELOPMENT.md  PIPELINE.md
registry/tools/: agent-board.yaml  cipher.yaml  color.yaml  subA.yaml  subB.yaml  subC.yaml  subD.yaml  subE.yaml  subF.yaml  subG.yaml  subH.yaml  subI.yaml  subJ.yaml  subK.yaml  subL.yaml  yixing.yaml
schemas/: agent-board-input.json  agent-board-output.json  cipher-input.json  cipher-output.json  clipboard-input.json  clipboard-output.json  color-input.json  color-output.json  subA-input.json  subA-output.json  subB-input.json  subB-output.json  subC-input.json  subC-output.json  tool-manifest.schema.json  yixing-input.json  yixing-output.json
scripts/: build-tool-catalog.mjs  build-wasm.sh  prepare-submods.mjs  validate-manifests.mjs
services/tools-api/: Cargo.toml  Dockerfile
services/tools-api/config/: tool-manifests.json
services/tools-api/src/: lib.rs  main.rs
(+25 files in other folders)
